--- a/css/main.css
+++ b/css/main.css
@@ -279,3 +279,31 @@ main {
 .disabled {
     display: none;
 }
+.hora{
+    display: flex;
+}
+.hora h3{
+    font-size: 50px;
+margin: 0px 5px;
+}
+.lista-usuarios {
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.lista-usuarios li{
+    display: flex;
+    border-bottom: 5px yellowgreen solid;
+    margin: 20px 0px;
+}
+.titulo {
+    margin-bottom: 10px;
+    margin-top: 20px;
+    text-align: center;
+    font-size: 35px;
+}
+.col{
+    background-color: black;
+    color: #e2e2e2;
+}
